tests/ui/repr/invalid_repr_list_help.stderr
error[E0539]: malformed `repr` attribute input
  --> $DIR/invalid_repr_list_help.rs:4:1
   |
LL | #[repr(uwu)]
   | ^^^^^^^---^^
   |        |
   |        valid arguments are `align`, `packed`, `Rust`, `C`, `simd`, `complex`, `transparent`, `i8`, `u8`, `i16`, `u16`, `i32`, `u32`, `i64`, `u64`, `i128`, `u128`, `isize` or `usize`
   |
   = note: for more information, visit <https://doc.rust-lang.org/reference/type-layout.html#representations>

error[E0539]: malformed `repr` attribute input
  --> $DIR/invalid_repr_list_help.rs:7:1
   |
LL | #[repr(uwu = "a")]
   | ^^^^^^^---------^^
   |        |
   |        valid arguments are `align`, `packed`, `Rust`, `C`, `simd`, `complex`, `transparent`, `i8`, `u8`, `i16`, `u16`, `i32`, `u32`, `i64`, `u64`, `i128`, `u128`, `isize` or `usize`
   |
   = note: for more information, visit <https://doc.rust-lang.org/reference/type-layout.html#representations>

error[E0539]: malformed `repr` attribute input
  --> $DIR/invalid_repr_list_help.rs:10:1
   |
LL | #[repr(uwu(4))]
   | ^^^^^^^------^^
   |        |
   |        valid arguments are `align`, `packed`, `Rust`, `C`, `simd`, `complex`, `transparent`, `i8`, `u8`, `i16`, `u16`, `i32`, `u32`, `i64`, `u64`, `i128`, `u128`, `isize` or `usize`
   |
   = note: for more information, visit <https://doc.rust-lang.org/reference/type-layout.html#representations>

error[E0539]: malformed `repr` attribute input
  --> $DIR/invalid_repr_list_help.rs:15:1
   |
LL | #[repr(uwu, u8)]
   | ^^^^^^^---^^^^^^
   |        |
   |        valid arguments are `align`, `packed`, `Rust`, `C`, `simd`, `complex`, `transparent`, `i8`, `u8`, `i16`, `u16`, `i32`, `u32`, `i64`, `u64`, `i128`, `u128`, `isize` or `usize`
   |
   = note: for more information, visit <https://doc.rust-lang.org/reference/type-layout.html#representations>

error[E0539]: malformed `repr` attribute input
  --> $DIR/invalid_repr_list_help.rs:20:1
   |
LL | #[repr(uwu)]
   | ^^^^^^^---^^
   |        |
   |        valid arguments are `align`, `packed`, `Rust`, `C`, `simd`, `complex`, `transparent`, `i8`, `u8`, `i16`, `u16`, `i32`, `u32`, `i64`, `u64`, `i128`, `u128`, `isize` or `usize`
   |
   = note: for more information, visit <https://doc.rust-lang.org/reference/type-layout.html#representations>

error: unknown `doc` attribute `owo`
  --> $DIR/invalid_repr_list_help.rs:21:7
   |
LL | #[doc(owo)]
   |       ^^^
   |
note: the lint level is defined here
  --> $DIR/invalid_repr_list_help.rs:1:9
   |
LL | #![deny(invalid_doc_attributes)]
   |         ^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 6 previous errors

For more information about this error, try `rustc --explain E0539`.
